Update pic and circles up top

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!--
 body {
 display: table;
-background-image: url(images/background.jpg);
+background-image: url(images/CWBPic.jpg);
 background-repeat: no-repeat;
 background-position: center; 
 -webkit-background-size: cover;
@@ -15,19 +15,22 @@ background-position: center;
 background-size:cover;
 height: 100%;
 width: 100%;
+text-align: center;
 }
 span {
   font-size: 5.5vmin !important;
 }
 div {
   display: table-cell;
-  vertical-align: middle;
+}
+a {
+  text-decoration: none;
 }
 .icon-background {
-    color: rgba(0, 46, 102);
+  color: rgba(0, 46, 102);
 }
 .icon {
-    color: #ede9e6;
+  color: #ede9e6;
 }
 -->
 </style>
@@ -43,21 +46,18 @@ div {
   <i class="fa fa-facebook fa-stack-1x icon"></i>
 </span>
 </a>
-</br>
 <a href="https://coldweatherboy.bandcamp.com/releases">
 <span class="fa-stack fa-2x">
   <i class="fa fa-circle fa-stack-2x icon-background"></i>
   <i class="fa fa-bandcamp fa-stack-1x icon"></i>
 </span>
 </a>
-</br>
 <a href="https://open.spotify.com/artist/6LEr6gM4CQNb1XhSstublH">
 <span class="fa-stack fa-2x">
   <i class="fa fa-circle fa-stack-2x icon-background"></i>
   <i class="fa fa-spotify fa-stack-1x icon"></i>
 </span>
 </a>
-</br>
 <a href="https://www.instagram.com/coldweatherboy/">
 <span class="fa-stack fa-2x">
   <i class="fa fa-circle fa-stack-2x icon-background"></i>
