--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@ body {
 }
 #footer {
   position: fixed;
-  bottom: 10vh;
+  bottom: 12vh;
   height: 5.5vmin;
   width: 100%;
 }
+#social {
+  bottom: 10vh;
+}
 #email {
-  margin-top: -2.5vh;
+  margin-top: -1vh;
   font-size: 3vh;
 }
 #email a {
